--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "https://Sad0328.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "node-modules": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-redux": "^9.1.0",
+    "react-scripts": "^3.0.1",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
